# Doc-rock

./: .env.example  .gitignore  README.md  pyproject.toml
src/mcp_doc_generator/: __init__.py  __main__.py  server.py
src/mcp_doc_generator/core/: __init__.py  analyzer.py  chunker.py  diagram_gen.py  ingestion.py  readme_gen.py
src/mcp_doc_generator/llm/: __init__.py  client.py  prompts.py
src/mcp_doc_generator/llm/providers/: __init__.py  anthropic.py  local.py  openai.py
src/mcp_doc_generator/schemas/: __init__.py  analysis.py  chunk.py  diagram.py  readme.py
src/mcp_doc_generator/tools/: __init__.py  analyze_repository.py  chunk_codebase.py  extract_architecture.py  generate_readme.py
src/mcp_doc_generator/utils/: __init__.py
